Update javassist to 3.24.0