@@ -16,9 +16,13 @@
 
 package org.hotswap.agent.javassist;
 
-import java.io.*;
-import java.net.URL;
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URL;
+import java.net.URLConnection;
+import java.net.URLStreamHandler;
 
 /**
  * A <code>ByteArrayClassPath</code> contains bytes that is served as
@@ -37,7 +41,7 @@ import java.net.MalformedURLException;
  *
  * <p>The <code>ClassPool</code> object <code>cp</code> uses the created
  * <code>ByteArrayClassPath</code> object as the source of the class file.
- * 
+ *
  * <p>A <code>ByteArrayClassPath</code> must be instantiated for every
  * class.  It contains only a single class file.
  *
@@ -62,11 +66,7 @@ public class ByteArrayClassPath implements ClassPath {
         this.classfile = classfile;
     }
 
-    /**
-     * Closes this class path.
-     */
-    public void close() {}
-
+    @Override
     public String toString() {
         return "byte[]:" + classname;
     }
@@ -74,26 +74,49 @@ public class ByteArrayClassPath implements ClassPath {
     /**
      * Opens the class file.
      */
+    @Override
     public InputStream openClassfile(String classname) {
         if(this.classname.equals(classname))
             return new ByteArrayInputStream(classfile);
-        else
-            return null;
+        return null;
     }
 
     /**
      * Obtains the URL.
      */
+    @Override
     public URL find(String classname) {
         if(this.classname.equals(classname)) {
             String cname = classname.replace('.', '/') + ".class";
             try {
-                // return new File(cname).toURL();
-                return new URL("file:/ByteArrayClassPath/" + cname);
+                return new URL(null, "file:/ByteArrayClassPath/" + cname, new BytecodeURLStreamHandler());
             }
             catch (MalformedURLException e) {}
         }
 
         return null;
+    }
+
+    private class BytecodeURLStreamHandler extends URLStreamHandler {
+        protected URLConnection openConnection(final URL u) {
+            return new BytecodeURLConnection(u);
+        }
+    }
+
+    private class BytecodeURLConnection extends URLConnection {
+        protected BytecodeURLConnection(URL url) {
+            super(url);
+        }
+
+        public void connect() throws IOException {
+        }
+
+        public InputStream getInputStream() throws IOException {
+            return new ByteArrayInputStream(classfile);
+        }
+
+        public int getContentLength() {
+            return classfile.length;
+        }
     }
 }
